Annex build working for Java 11